--- a/ChatApp/App.axaml
+++ b/ChatApp/App.axaml
@@ -1,12 +1,9 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:ChatApp"
              x:Class="ChatApp.App">
     <Application.DataTemplates>
-        <local:ViewLocator/>
     </Application.DataTemplates>
-
     <Application.Styles>
-        <FluentTheme Mode="Dark"/>
+        <FluentTheme Mode="Light"/>
     </Application.Styles>
 </Application>
